--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,8 @@ python-dotenv==1.1.0
 requests==2.32.3
 urllib3==2.4.0
 Werkzeug==3.1.3
+flask-sqlalchemy
+pymysql
+redis
+python-dotenv
+flask-cors
